--- a/style.css
+++ b/style.css
@@ -1,31 +1,49 @@
-*{
-    margin: 0;
-    padding: auto;
-}
-.banner{width: 100%;
-height: 100vh;
-background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)), url(port.jpg);}
-.menu{
-    width: 85%;
-    margin: auto;
-    padding: 35px 0;
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-}
-.menu ul li{
-    display: inline;
-    margin:0 80px ;
 
+table{background:grey;
+    
+    width:100%;
+    border-collapse:collapse;  
 }
-.menu ul li a{
-     color: #fff;
-}
-.intro{
-    width: 100%;
-    position:absolute;
-    transform: translateY(-50%);
-    Top: 50%;
+  
+
+  th {
+    color:white;
+    font-size:50px;
     text-align: center;
-    color: white;
-}
+    }
+
+  #tr1{
+    border-bottom:2px solid grey;
+    padding: 10px;
+  }
+  #tr2{
+    border-bottom:2px solid grey;
+    padding: 10px;
+  }    
+  img{
+  width:100px;
+  height:100px;
+  }
+  div{
+    font-size: 25px;
+    color:white;
+  }
+  ul{
+    color:white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  #div11,#div21,#div31{
+    text-align: left;
+    color:white;
+    font-size: 50px;
+  }
+  #div12,#div22{
+    text-align: left;
+    color:white;
+    font-size: 15px;
+  }
+
+  #td12,#td22,#td32{
+padding-right: 50px;
+  }
+ 
